# daps

./: .gitattributes  .gitignore  .travis-debug  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  Changelog  Dockerfile  INSTALL  INSTALL.adoc  Makefile  Makefile.am  Makefile.in  README  README.Debian  README.adoc  README.devel  README.devel.adoc  README.quickstart  README.quickstart.adoc  README.upgrade_from_4.x  README.upgrade_from_susedoc_4.x  TODO  TROUBLESHOOTING  Ubuntu_catalog_fix  VERSION.in  aclocal.m4  app.daps.user.editors.html  app.daps.user.migrate.html  art.tutorial.html  autogen.sh  bk01apd.html  bk02ar03.html  book.daps.quick.html  book.daps.user.html  build-old-release-page-command  cha.daps.user.config.html  cha.daps.user.features.html  (+7 more)
.github/: CONTRIBUTING.md  ISSUE_TEMPLATE.md
aspell/: acronyms.txt  en_US-w_accents_suse.multi  faq.txt  make_dictionary.sh  suse_wordlist.txt  terminology_todos_open_questions.txt
autobuild/: daps-autobuild  daps-autobuild.in  daps-autobuild.rnc  daps-autobuild.xml  daps_autobuild  daps_autobuild.in  daps_autobuild.rnc
bash_completion/: daps
css/: daps.css
debian/: autoreconf.after  autoreconf.before  catalog-xsl.xml  catalog.xml  changelog  clean-source-tarball.sh  control  copyright  daps.doc-base.quick-guide  daps.doc-base.user-guide  daps.docs  daps.links  daps.recipe  daps.xmlcatalogs  dirs  docs  rules  watch
deprecated/: Makefile.am  andale-sans.xml  andale-sans_bold.xml  andale-sans_bolditalic.xml  andale-sans_italic.xml  autogen.sh  book.spec.in  buildbook.sh  configure.ac  daps-aliases  docbook.xsl  nimbus-mono.xml  nimbus-mono_bold.xml  nimbus-mono_bolditalic.xml  nimbus-mono_italic.xml  novdocx.rnc  novdocx.rng  novdocx.xsd  productspec.rnc  productspec.rng  susedoc-doc.spec.in  susedoc.spec.in  thorndale-serif.xml  thorndale-serif_bold.xml  thorndale-serif_bolditalic.xml  thorndale-serif_italic.xml  xep-home.mod.in  xml.xsd
deprecated/python/daps/: docbook.py
deprecated/test/: TODO  common.sh  runtests.sh
deprecated/test/test_0000-common/: testing.sh
deprecated/test/test_0010-bnc706475/: testing.sh
deprecated/test/test_0011-bnc700523/xml/: MAIN.guimenutest.xml
deprecated/test/test_0100_targets_doc/: testing.sh
deprecated/xep-hyphen-original/: dehyph_rx.tex  frhyph_rx.tex  ruhyphal.tex  ukhyphen.tex
deprecated/xslt/executive-style/: article.01.xml
devel/: CatalogManager.properties  dist_graphics_set.mk  dmstat.pl  novdoc-docbook.rnc  package.mk  project_files.pl  project_files.py  susedoc-saxon  susedoc-sortindexterms.py  svn_wdiff
doc/: DC-daps-all  DC-daps-all-test  DC-daps-asciidoc  DC-daps-quick  DC-daps-tutorial  DC-daps-user  DC-daps-user-new  DC-daps-user-pdf  ENV-daps-all  ENV-daps-makedoc  ENV-daps-quick  ENV-daps-svndoc  ENV-daps-user  ENV-susedoc-makedoc  ENV-susedoc-svndoc  app.daps.user.docupdates.html  app.daps.user.editors.html  app.daps.user.migrate.html  art.daps.asciidoc.appendix.html  art.daps.quick.html  art.tutorial.html  (+74 more)
python-scripts/daps-xmlwellformed/: .coveragerc  README.md  devel-requirements.txt  setup.cfg  setup.py  tox.ini
python-scripts/daps-xmlwellformed/tests/: dxwf.py  test_cli.py  test_integration.py  test_lxml_version.py  test_xml-bad.py  test_xml-good.py
python-scripts/daps-xmlwellformed/tests/data/bad/: para-included.xml  test-syntax-comments.xml  test-syntax-err-hyphen-in-comment.xml  test-syntax-err-ltslash-required.xml  test-syntax-err-name-required.xml  test-syntax-err-tag-name-mismatch.xml  test-syntax-err-undeclared-entity.xml  test-undef-entity.xml  test-xinclude-file-not-found-missing-entity-file.xml  test-xinclude-file-not-found.xml  test-xinclude-undeclared-entity-in-main.xml  test-xinclude-undeclared-entity.xml
python-scripts/daps-xmlwellformed/tests/data/good/: entity.ents  test-defined-entity-with-xinclude.xml  test-defined-entity.xml  test-external-entity.xml  test-wents-wxi.xml
python-scripts/fix-screen/: README.md  fix-screen.py  setup.cfg
python-scripts/fix-screen/tests/: screen.py  test-01.xml  test-02.xml  test-03.xml  test-04.xml  test_content.py  test_entities.py  test_helper.py  test_modify.py
python-scripts/metadatavalidator/: .gitignore  README.rst  metadatavalidator.ini  metadatavalidator.py  pyproject.toml
python-scripts/metadatavalidator/src/metadatavalidator/: __init__.py  _meta.py  cli.py  common.py  config.py  exceptions.py  logging.py  process.py  util.py
python-scripts/metadatavalidator/src/metadatavalidator/checks/: __init__.py  check_info.py  check_meta.py  check_root.py
python-scripts/metadatavalidator/tests/: _utils.py  conftest.py  test_script_cli.py  test_script_config.py  test_util.py
python-scripts/metadatavalidator/tests/checks/: test_check_info.py  test_check_meta.py  test_check_root.py
python-scripts/metadatavalidator/tests/data/: metadatavalidator.ini
python-scripts/metadatavalidator/tests/integration/badcase1/: test_badcase1.py
python-scripts/metadatavalidator/tests/integration/badcases/: article-invalid.xml  article.xml  test_badcase.py
python-scripts/metadatavalidator/tests/integration/case1/: test_integration.py
python-scripts/metadatavalidator/tests/integration/goodcase1/: article-with-entity-in-doctype.xml  config-test.ini  my-entities.ent
python-scripts/metadatavalidator/tests/integration/goodcases/: article-with-external-entity.xml  article.xml  config-test.ini  test_goodcase.py
python-scripts/metadatavalidator/tests/integration/goodcases/nested-dir/a/b/: article-with-external-entity-in-nested-dir.xml
python-scripts/metadatavalidator/tests/unit/: test_assembly.py  test_script_cli.py  test_script_config.py  test_script_meta.py
python-scripts/metadatavalidator/tests/unit/checks/: test_check_info.py  test_check_meta.py  test_check_meta_arch.py  test_check_meta_category.py  test_check_meta_description.py  test_check_meta_platform.py  test_check_meta_series.py  test_check_meta_task.py  test_check_meta_techpartner.py  test_check_meta_title.py  test_check_revhistory.py  test_check_root.py
python-scripts/metadatavalidator/tests/unit/data/: metadatavalidator.ini
(+2066 files in other folders)
